--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "persian-number": "^1.5.1",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
