add: vue scrollto

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
